@@ -40,50 +40,66 @@ In this module you will beautify the CDBook-Store web application and add nice p
 
 ## Copy the Arquillian tests
 
-* `cp ../before/07-WebApplication/BookBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
-* It adds a `should_check_books_by_category()` test case
 * `cp ../before/07-WebApplication/BookServiceTest.java src/test/java/org/agoncal/training/javaee6adv/service`
 * It adds a `should_check_images` and a `should_check_books_by_category` method
+* `cp ../before/07-WebApplication/BookBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
+* It adds a `should_check_books_by_category()` test case
 
-## Copy the Arquillian tests
+## Refactor the JSF backing bean and EJB
 
-* Copy the files `BookServiceTest.java` and `CDServiceTest.java` to the `service` package so they can test the services
-* `cp ../before/07-WebApplication/BookServiceTest.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/service`
-* `cp ../before/07-WebApplication/CDServiceTest.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/service`
-* Copy the files `BookBeanTest.java` and `CDBeanTest.java` to the `view` package so they can test the backing beans
-* `cp ../before/07-WebApplication/BookBeanTest.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/view`
-* `cp ../before/07-WebApplication/CDBeanTest.java cdbookstore/src/test/java/org/agoncal/training/javaee6adv/view`
-
-## Code the services and JSF backing beans until the test execute
-
-* Remember the `@Named` annotation allows a service to be used within a JSF page
-* Remember the `findByIdWithRelations` method if you need to load the dependent entities
+* `BookService` has a `public List<String> findAllImages()` method that returns all non null images URL (uses a `TypedQuery<String>`) 
+* `BookService` has a `public List<Book> findByCategory(Long categoryId)` method that returns all the books for a given category
+* `BookBean` should have a `private Long categoryId` and a `private List<Book> booksPerCateogry` with getters/setters 
+* `BookBean` has a `public void findByCategory()` method that calls the EJB
+* Remember that the `@Named` annotation allows a service to be used within a JSF page
 
 ## Execute the tests in a remote environment
 
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
 * `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
-* If you have the following error, it's because you are not using the Arquillian Maven profile `DeploymentScenario contains a target (_DEFAULT_) not matching any defined Container in the registry`
-* `NoClassDefFoundError` means that your ShrinkWrap packaging misses some classes (check the `createDeployment` method) 
-* `ConstraintViolationException` is thrown when the entity is not valid
 
-## Debug the tests if needed
+## Build, Deploy and check the web application
+                 
+* With a browser go to [http://localhost:8080/cdbookstore]()
+* The top link `Book` should be enabled 
+* [http://localhost:8080/cdbookstore/faces/book/index.xhtml]() give you access to the book pages
 
-* Make sure WildFly has the debug settings `JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n"`
+# DOJO - Web pages to browse CDs
 
-## Code the pages for CDs
+## Create the JSF pages
 
-* The CD pages have to be under `src/main/webapp/cd` :
-* `index.xhtml` to visualize all the books
-* `navigation.xhtml` lists all the CD genres
-* `view.xhtml` shows the details of a CD
-* `viewPerGenre.xhtml` shows all the CDs for a particular genre
+* Based on `webapp/book` create a set of pages to browse the CDs
+* The `webapp/cd/index.xhtml` page needs a `cdService.findAllImages()` method
+* The `webapp/cd/navigation.xhtml` page display all the genres and needs a `genreService.listAll()` method
+* The `webapp/cd/view.xhtml` page displays the information for a book
+* The `viewPerGenre.xhtml` page displays the list of CDs per genre and needs a `cdBean.findByGenre` method
 * Get inspiration from `src/main/webapp/book`
 
-## Check the web application
+## Copy the Arquillian tests
 
+* `cp ../before/07-WebApplication/CDServiceTest.java src/test/java/org/agoncal/training/javaee6adv/service`
+* It adds a `should_check_images` and a `should_check_books_by_genre` method
+* `cp ../before/07-WebApplication/CDBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
+* It adds a `should_check_books_by_genre()` test case
+
+## Refactor the JSF backing bean and EJB
+
+* `CDService` has a `public List<String> findAllImages()` method that returns all non null images URL (uses a `TypedQuery<String>`) 
+* `CDService` has a `public List<CD> findByGenre(Long genreId)` method that returns all the CDs for a given genre
+* `CDBean` should have a `private Long genreId` and a `private List<CD> cdsPerGenre` with getters/setters 
+* `CDBean` has a `public void findByGenre()` method that calls the EJB
+* Remember that the `@Named` annotation allows a service to be used within a JSF page
+
+## Execute the tests in a remote environment
+
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+
+## Build, Deploy and check the web application
+                 
 * With a browser go to [http://localhost:8080/cdbookstore]()
+* The top link `Book` should be enabled 
+* [http://localhost:8080/cdbookstore/faces/book/index.xhtml]() give you access to the book pages
 
 ## Check JSF debug information
 
@@ -99,8 +115,8 @@ In this module you will beautify the CDBook-Store web application and add nice p
 * Bootstrap as a JSF resource (jar in a classpath)
 * JSF staging (`projectStage`)
 * In Arquillian we can add an `import.sql` as a resource
-* EJB stateless can be `@Named`
+* EJB stateless can be `@Named` if they are used in a page (not all our EJBs are `@Named`)
 
 # Backup your code
 
-* Save a backup of your code at `../after/06-WebApplication/`
+* Save a backup of your code at `../after/07-WebApplication/`
